# l4dstats

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO-DATA.md  Dockerfile.cloudflare  Dockerfile.dev  Dockerfile.production  L4D2.md  PLAN.md  README.md  SECURITY.md  compose.production.yaml  compose.yaml  deny.toml  init.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
crates/demo-source1-native/: Cargo.toml
crates/demo-source1-native/src/: artifact.rs  bit_reader.rs  data_tables.rs  demo.rs  direct_wire.rs  entities.rs  error.rs  event_wire.rs  game_events.rs  identity.rs  lib.rs  network.rs  projection.rs  reader.rs  string_tables.rs  traversal.rs  usercmd.rs  wire.rs
crates/demo-source1-node/: Cargo.toml  README.md  build.rs  index.d.ts  package.json
crates/demo-source1-node/scripts/: build.mjs  compute-build-sha256.sh
crates/demo-source1-node/src/: lib.rs
crates/demo-source1-node/test/: config.mjs  lineage.test.mjs  load.test.mjs  real-demo.test.mjs
docs/: ARCHITECTURE.md  COMPETITIVE-STATS-AUDIT.md  DETECTORS.md  L4DSTATS-RATING.md  PRODUCT-AUDIT.md  RESEARCH.md  THIRD_PARTY.md  THREAT_MODEL.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/bounded_projection/: synthetic
fuzz/corpus/demo_framing/: synthetic
fuzz/corpus/game_events/: synthetic
fuzz/corpus/network_tables_compression/: synthetic
fuzz/corpus/readers/: synthetic
fuzz/corpus/stateful_entities/: synthetic
fuzz/fuzz_targets/: bounded_projection.rs  demo_framing.rs  game_events.rs  network_tables_compression.rs  readers.rs  stateful_entities.rs
map-geometry/: c10m1_caves.json  c10m2_drainage.json  c10m3_ranchhouse.json  c10m4_mainstreet.json  c10m5_houseboat.json  c11m1_greenhouse.json  c11m2_offices.json  c11m3_garage.json  c11m4_terminal.json  c11m5_runway.json  c12m1_hilltop.json  c12m2_traintunnel.json  c12m3_bridge.json  c12m4_barn.json  c12m5_cornfield.json  c13m1_alpinecreek.json  c13m2_southpinestream.json  c13m3_memorialbridge.json  c13m4_cutthroatcreek.json  c14m1_junkyard.json  c14m2_lighthouse.json  c1m1_hotel.json  c1m2_streets.json  c1m3_mall.json  c1m4_atrium.json  c2m1_highway.json  c2m2_fairgrounds.json  c2m3_coaster.json  c2m4_barns.json  c2m5_concert.json  c3m1_plankcountry.json  c3m2_swamp.json  c3m3_shantytown.json  c3m4_plantation.json  c4m1_milltown_a.json  c4m2_sugarmill_a.json  c4m3_sugarmill_b.json  c4m4_milltown_b.json  c4m5_milltown_escape.json  c5m1_waterfront.json  (+18 more)
scripts/: backup-workbench.sh  build-parser-sandbox.mjs  check-dev-environment.mjs  check-dev-native-startup.mjs  check-licenses.mjs  check-production-compose.mjs  check-production-health.mjs  check-production-metrics.mjs  compare-untitled-framing.mjs  export-map-geometry.sh  measure-hosted-footprint.mjs  native-parser-contract.mjs  native-parser-sandbox-probe.mjs  parser-no-network.c  prepare-native-parser.sh  provision-posthog-dashboard.mjs  restore-workbench.sh  retention-workbench.sh  (+6 more)
(+202 files in other folders)
