[workspace]
members = ["crates/demo-source1-native", "crates/demo-source1-node"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97.1"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
