[package]
name = "demo-source1-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[lints.rust]
# napi-derive's registration shim locally lowers this lint inside generated
# code, which is incompatible with workspace `forbid`. Repository source still
# contains no unsafe blocks and deny prevents adding one accidentally.
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
demo-source1-native = { path = "../demo-source1-native", version = "=0.2.0" }
hex = "=0.4.3"
napi = { version = "=3.10.5", default-features = false, features = ["napi8"] }
napi-derive = "=3.5.10"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"

[build-dependencies]
napi-build = "=2.3.2"
